--- a/GithubDemo/Base.lproj/Main.storyboard
+++ b/GithubDemo/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kcP-vE-O7S">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kcP-vE-O7S">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Repo Results View Controller-->
@@ -14,15 +15,129 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qMC-J3-IyG">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GitHubCell" rowHeight="200" id="amh-td-WBx" customClass="GitHubCell" customModule="GithubDemo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="320" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="amh-td-WBx" id="l1n-L7-kwe">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="199.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="AFNetworking" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yGS-7V-1Ia">
+                                                    <rect key="frame" x="8" y="0.0" width="152" height="18"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by AFNetworking" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2q-zp-b2p">
+                                                    <rect key="frame" x="8" y="26" width="131.5" height="20.5"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="fork" translatesAutoresizingMaskIntoConstraints="NO" id="g3k-dM-yYX">
+                                                    <rect key="frame" x="248" y="0.0" width="18" height="24"/>
+                                                    <animations/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="I58-zg-ygS"/>
+                                                        <constraint firstAttribute="width" constant="18" id="Pwl-uk-pfK"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="x0C-S7-fV0">
+                                                    <rect key="frame" x="168" y="0.0" width="21" height="24"/>
+                                                    <animations/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="21" id="7jc-HY-dsV"/>
+                                                        <constraint firstAttribute="height" constant="24" id="eS3-rx-DmG"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17396" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RHm-Mp-MnD">
+                                                    <rect key="frame" x="197" y="8" width="43" height="18"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.64829898049645385" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5084" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FFG-WM-hVe">
+                                                    <rect key="frame" x="274" y="8" width="37.5" height="18"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.64829898049645385" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xsm-UZ-rVE">
+                                                    <rect key="frame" x="8" y="53" width="78" height="78.5"/>
+                                                    <animations/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="78" id="Pkx-D2-aVM"/>
+                                                        <constraint firstAttribute="height" constant="78" id="aw6-Sl-8QZ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cjh-6s-Hb1">
+                                                    <rect key="frame" x="97" y="53" width="215" height="18"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.65275930851063835" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstItem="o2q-zp-b2p" firstAttribute="top" secondItem="yGS-7V-1Ia" secondAttribute="bottom" constant="8" id="335-go-uwU"/>
+                                                <constraint firstItem="Xsm-UZ-rVE" firstAttribute="leading" secondItem="l1n-L7-kwe" secondAttribute="leading" constant="8" id="3We-GR-WT9"/>
+                                                <constraint firstItem="RHm-Mp-MnD" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" constant="8" id="4X1-ku-yg5"/>
+                                                <constraint firstAttribute="trailing" secondItem="Cjh-6s-Hb1" secondAttribute="trailing" constant="8" id="8JJ-5R-Baj"/>
+                                                <constraint firstItem="FFG-WM-hVe" firstAttribute="leading" secondItem="g3k-dM-yYX" secondAttribute="trailing" constant="8" id="B2d-CU-eSg"/>
+                                                <constraint firstItem="Cjh-6s-Hb1" firstAttribute="top" secondItem="Xsm-UZ-rVE" secondAttribute="top" id="L2r-hz-arb"/>
+                                                <constraint firstAttribute="trailing" secondItem="FFG-WM-hVe" secondAttribute="trailing" constant="8" id="LVC-wb-fXp"/>
+                                                <constraint firstItem="o2q-zp-b2p" firstAttribute="leading" secondItem="l1n-L7-kwe" secondAttribute="leading" constant="8" id="P9o-mx-qWx"/>
+                                                <constraint firstItem="x0C-S7-fV0" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" id="QVB-51-WER"/>
+                                                <constraint firstItem="FFG-WM-hVe" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" constant="8" id="V80-Ij-COi"/>
+                                                <constraint firstItem="Cjh-6s-Hb1" firstAttribute="leading" secondItem="Xsm-UZ-rVE" secondAttribute="trailing" constant="11" id="WnY-Yv-VQ0"/>
+                                                <constraint firstItem="g3k-dM-yYX" firstAttribute="leading" secondItem="RHm-Mp-MnD" secondAttribute="trailing" constant="8" id="cm8-6i-Lsm"/>
+                                                <constraint firstItem="Xsm-UZ-rVE" firstAttribute="top" secondItem="o2q-zp-b2p" secondAttribute="bottom" constant="6.5" id="e9g-bp-L90"/>
+                                                <constraint firstItem="x0C-S7-fV0" firstAttribute="leading" secondItem="yGS-7V-1Ia" secondAttribute="trailing" constant="8" id="eFc-XJ-vez"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Xsm-UZ-rVE" secondAttribute="bottom" constant="8" id="gD4-xm-8sS"/>
+                                                <constraint firstItem="yGS-7V-1Ia" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" id="qq0-mZ-NbI"/>
+                                                <constraint firstItem="g3k-dM-yYX" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" id="teO-ge-2qa"/>
+                                                <constraint firstItem="RHm-Mp-MnD" firstAttribute="leading" secondItem="x0C-S7-fV0" secondAttribute="trailing" constant="8" id="tkY-ai-3Y1"/>
+                                                <constraint firstItem="yGS-7V-1Ia" firstAttribute="leading" secondItem="l1n-L7-kwe" secondAttribute="leading" constant="8" id="vIu-jk-aQc"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Cjh-6s-Hb1" secondAttribute="bottom" constant="8" id="vn3-SD-22O"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                        <connections>
+                                            <outlet property="descriptionLabel" destination="Cjh-6s-Hb1" id="U0h-TQ-L2F"/>
+                                            <outlet property="forksLabel" destination="FFG-WM-hVe" id="g1P-9V-LNH"/>
+                                            <outlet property="nameLabel" destination="yGS-7V-1Ia" id="VLT-2e-uIP"/>
+                                            <outlet property="starsLabel" destination="RHm-Mp-MnD" id="Ijj-gH-a4x"/>
+                                            <outlet property="userImage" destination="Xsm-UZ-rVE" id="Dol-DU-QQ2"/>
+                                            <outlet property="userLabel" destination="o2q-zp-b2p" id="Htp-ye-Hdl"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="x5q-EH-pP8"/>
+                    <connections>
+                        <outlet property="tableView" destination="qMC-J3-IyG" id="eGo-Xm-Rpw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="819" y="-557"/>
+            <point key="canvasLocation" x="436" y="-528"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FpP-oR-azb">
@@ -32,6 +147,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dMC-ry-BRe">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -40,7 +156,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dru-y2-L7C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="-557"/>
+            <point key="canvasLocation" x="70.400000000000006" y="-527.29333333333329"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="fork" width="18" height="24"/>
+        <image name="star" width="21" height="24"/>
+    </resources>
 </document>
