--- a/GithubDemo/Base.lproj/Main.storyboard
+++ b/GithubDemo/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qMC-J3-IyG">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qMC-J3-IyG">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -37,8 +37,8 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by AFNetworking" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2q-zp-b2p">
-                                                    <rect key="frame" x="8" y="26" width="131.5" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AFNetworking" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2q-zp-b2p">
+                                                    <rect key="frame" x="28" y="22" width="108.5" height="20.5"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -75,15 +75,22 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xsm-UZ-rVE">
-                                                    <rect key="frame" x="8" y="53" width="78" height="78.5"/>
+                                                    <rect key="frame" x="8" y="49" width="78" height="78.5"/>
                                                     <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="78" id="Pkx-D2-aVM"/>
                                                         <constraint firstAttribute="height" constant="78" id="aw6-Sl-8QZ"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F8i-Et-PZn">
+                                                    <rect key="frame" x="8" y="26" width="16" height="17"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.43445271596858637" green="0.43445271596858637" blue="0.43445271596858637" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cjh-6s-Hb1">
-                                                    <rect key="frame" x="97" y="53" width="215" height="18"/>
+                                                    <rect key="frame" x="97" y="49.5" width="215" height="18"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.65275930851063835" colorSpace="calibratedRGB"/>
@@ -92,14 +99,14 @@
                                             </subviews>
                                             <animations/>
                                             <constraints>
-                                                <constraint firstItem="o2q-zp-b2p" firstAttribute="top" secondItem="yGS-7V-1Ia" secondAttribute="bottom" constant="8" id="335-go-uwU"/>
+                                                <constraint firstItem="F8i-Et-PZn" firstAttribute="leading" secondItem="l1n-L7-kwe" secondAttribute="leading" constant="8" id="0Iy-kF-7zw"/>
                                                 <constraint firstItem="Xsm-UZ-rVE" firstAttribute="leading" secondItem="l1n-L7-kwe" secondAttribute="leading" constant="8" id="3We-GR-WT9"/>
                                                 <constraint firstItem="RHm-Mp-MnD" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" constant="8" id="4X1-ku-yg5"/>
                                                 <constraint firstAttribute="trailing" secondItem="Cjh-6s-Hb1" secondAttribute="trailing" constant="8" id="8JJ-5R-Baj"/>
                                                 <constraint firstItem="FFG-WM-hVe" firstAttribute="leading" secondItem="g3k-dM-yYX" secondAttribute="trailing" constant="8" id="B2d-CU-eSg"/>
                                                 <constraint firstItem="Cjh-6s-Hb1" firstAttribute="top" secondItem="Xsm-UZ-rVE" secondAttribute="top" id="L2r-hz-arb"/>
                                                 <constraint firstAttribute="trailing" secondItem="FFG-WM-hVe" secondAttribute="trailing" constant="8" id="LVC-wb-fXp"/>
-                                                <constraint firstItem="o2q-zp-b2p" firstAttribute="leading" secondItem="l1n-L7-kwe" secondAttribute="leading" constant="8" id="P9o-mx-qWx"/>
+                                                <constraint firstItem="F8i-Et-PZn" firstAttribute="top" secondItem="yGS-7V-1Ia" secondAttribute="bottom" constant="8" id="M3I-sx-E96"/>
                                                 <constraint firstItem="x0C-S7-fV0" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" id="QVB-51-WER"/>
                                                 <constraint firstItem="FFG-WM-hVe" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" constant="8" id="V80-Ij-COi"/>
                                                 <constraint firstItem="Cjh-6s-Hb1" firstAttribute="leading" secondItem="Xsm-UZ-rVE" secondAttribute="trailing" constant="11" id="WnY-Yv-VQ0"/>
@@ -107,6 +114,8 @@
                                                 <constraint firstItem="Xsm-UZ-rVE" firstAttribute="top" secondItem="o2q-zp-b2p" secondAttribute="bottom" constant="6.5" id="e9g-bp-L90"/>
                                                 <constraint firstItem="x0C-S7-fV0" firstAttribute="leading" secondItem="yGS-7V-1Ia" secondAttribute="trailing" constant="8" id="eFc-XJ-vez"/>
                                                 <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Xsm-UZ-rVE" secondAttribute="bottom" constant="8" id="gD4-xm-8sS"/>
+                                                <constraint firstItem="o2q-zp-b2p" firstAttribute="bottom" secondItem="F8i-Et-PZn" secondAttribute="bottom" id="lgg-LI-Sgx"/>
+                                                <constraint firstItem="o2q-zp-b2p" firstAttribute="leading" secondItem="F8i-Et-PZn" secondAttribute="trailing" constant="4" id="oiR-v9-fp4"/>
                                                 <constraint firstItem="yGS-7V-1Ia" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" id="qq0-mZ-NbI"/>
                                                 <constraint firstItem="g3k-dM-yYX" firstAttribute="top" secondItem="l1n-L7-kwe" secondAttribute="top" id="teO-ge-2qa"/>
                                                 <constraint firstItem="RHm-Mp-MnD" firstAttribute="leading" secondItem="x0C-S7-fV0" secondAttribute="trailing" constant="8" id="tkY-ai-3Y1"/>
@@ -129,8 +138,20 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="qMC-J3-IyG" secondAttribute="bottom" id="1i9-za-kpE"/>
+                            <constraint firstItem="qMC-J3-IyG" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="psn-Jm-avQ"/>
+                            <constraint firstAttribute="trailing" secondItem="qMC-J3-IyG" secondAttribute="trailing" id="rd2-IM-bIh"/>
+                            <constraint firstItem="qMC-J3-IyG" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="v3p-A3-VeU"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="x5q-EH-pP8"/>
+                    <navigationItem key="navigationItem" id="x5q-EH-pP8">
+                        <barButtonItem key="leftBarButtonItem" title="Filter" id="T7x-11-FYY">
+                            <connections>
+                                <segue destination="E6y-Fx-Nkm" kind="modal" identifier="searchSegue" id="BMU-gA-zQj"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="qMC-J3-IyG" id="eGo-Xm-Rpw"/>
                     </connections>
@@ -157,6 +178,84 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dru-y2-L7C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="70.400000000000006" y="-527.29333333333329"/>
+        </scene>
+        <!--Search Settings View Controller-->
+        <scene sceneID="B1P-G3-Mqm">
+            <objects>
+                <viewController id="UQ7-Zb-0JJ" customClass="SearchSettingsViewController" customModule="GithubDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Tli-OG-mAR"/>
+                        <viewControllerLayoutGuide type="bottom" id="7aj-sy-CJM"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HH2-iB-NMe">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minimum number of stars = 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7V-O5-giD">
+                                <rect key="frame" x="8" y="89" width="304" height="18"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="500" translatesAutoresizingMaskIntoConstraints="NO" id="ZzS-ho-efR">
+                                <rect key="frame" x="6" y="115" width="308" height="31"/>
+                                <animations/>
+                                <connections>
+                                    <action selector="onValueChanged:" destination="UQ7-Zb-0JJ" eventType="valueChanged" id="Lmv-M3-s2R"/>
+                                </connections>
+                            </slider>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="h7V-O5-giD" firstAttribute="leading" secondItem="HH2-iB-NMe" secondAttribute="leading" constant="8" id="0RD-Kc-vTc"/>
+                            <constraint firstItem="ZzS-ho-efR" firstAttribute="top" secondItem="h7V-O5-giD" secondAttribute="bottom" constant="8" id="AWU-tU-wAy"/>
+                            <constraint firstItem="ZzS-ho-efR" firstAttribute="leading" secondItem="HH2-iB-NMe" secondAttribute="leading" constant="8" id="Hun-uV-Brb"/>
+                            <constraint firstItem="h7V-O5-giD" firstAttribute="top" secondItem="Tli-OG-mAR" secondAttribute="bottom" constant="25" id="oVl-ur-JOl"/>
+                            <constraint firstItem="ZzS-ho-efR" firstAttribute="trailing" secondItem="HH2-iB-NMe" secondAttribute="trailingMargin" constant="8" id="sLn-IP-Sc1"/>
+                            <constraint firstAttribute="trailing" secondItem="h7V-O5-giD" secondAttribute="trailing" constant="8" id="vR1-k5-C8p"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="gS7-Ij-UqH">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="tCT-rB-JvK">
+                            <connections>
+                                <action selector="backButtonPress:" destination="UQ7-Zb-0JJ" id="d1a-ec-Pi2"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="XK2-8L-Tfb">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="UQ7-Zb-0JJ" id="W2s-Xu-nQO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="starLabel" destination="h7V-O5-giD" id="cSj-xb-DHT"/>
+                        <outlet property="starSlider" destination="ZzS-ho-efR" id="hns-qm-gIF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="B16-11-WJ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1206" y="-528"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="w52-Rc-Nea">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E6y-Fx-Nkm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Wpp-84-YwS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UQ7-Zb-0JJ" kind="relationship" relationship="rootViewController" id="h7d-Md-NqB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u39-sL-4MX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="815" y="-528"/>
         </scene>
     </scenes>
     <resources>
